--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Nunito, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -11,6 +13,8 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --navbar-height: 56px;
 }
 
 a {
@@ -22,17 +26,84 @@ a:hover {
   color: #535bf2;
 }
 
+html {
+  display: flex;
+  overflow: hidden auto;
+  width: 100%;
+}
+
+#root {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-top: var(--navbar-height);
+  padding: 1em;
+}
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  justify-content: center;
+  min-width: 100%;
   min-height: 100vh;
+}
+
+.navbar {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  height: var(--navbar-height);
+  width: 100%;
+  top: 0;
+  left: 0;
+  border-bottom: 1px solid rgb(240, 240, 240);
+  padding: 0 8px;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  max-width: 1280px;
+  width: 100%;
+}
+
+.event-create-overlay {
+  position: absolute;
+}
+
+.event-list-container {
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 8px;
+  padding: 0;
+  margin: 0;
+  max-width: 320px;
+}
+
+.event-list-item {
+  display: flex;
+  flex-direction: column;
+  background: rgb(250, 250, 250);
+  padding: 2px 8px;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.04);
+  box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.03);
+  text-transform: capitalize;
+}
+
+.event-list-item p {
+  margin: 0;
 }
 
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+}
+
+h2 {
+  font-size: 1.2em;
+  margin-block: 16px;
 }
 
 button {
@@ -52,6 +123,15 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @media (prefers-color-scheme: light) {
